--- a/requirements.txt
+++ b/requirements.txt
@@ -9,10 +9,13 @@ isort==5.8.0
 lazy-object-proxy==1.6.0
 mccabe==0.6.1
 Pillow==8.2.0
+psycopg2-binary==2.9.3
 pylint==2.7.4
 pytz==2021.1
 six==1.15.0
 sqlparse==0.4.1
 toml==0.10.2
 virtualenv==20.4.3
+waitress==2.1.1
+whitenoise==6.0.0
 wrapt==1.12.1
