--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,15 @@ asgiref==3.3.1
 astroid==2.5.3
 colorama==0.4.4
 distlib==0.3.1
+dj-database-url==0.5.0
 Django==3.1.7
+django-heroku==0.3.1
 filelock==3.0.12
 isort==5.8.0
 lazy-object-proxy==1.6.0
 mccabe==0.6.1
 Pillow==8.2.0
+psycopg2==2.9.3
 psycopg2-binary==2.9.3
 pylint==2.7.4
 pytz==2021.1
